# openat-ext

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: copyfile.rs  lib.rs
tests/: .packit.yaml  basic.rs
