[package]
name = "openat-ext"
description = """
    Extension methods for the openat crate
"""
version = "0.1.4"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["open", "openat", "filesystem", "fs"]
categories = ["filesystem", "api-bindings"]
homepage = "http://github.com/cgwalters/openat-ext"
documentation = "http://docs.rs/openat-ext"

[dependencies]
openat = "0.1.15"
libc = "0.2.34"
nix = "0.17"

[dev-dependencies]
tempfile = "3.0.3"
