[package]
name = "openat-ext"
description = """
    Extension methods for the openat crate
"""
version = "0.1.11"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["open", "openat", "filesystem", "fs"]
categories = ["filesystem", "api-bindings"]
homepage = "http://github.com/cgwalters/openat-ext"
documentation = "http://docs.rs/openat-ext"

[dependencies]
drop_bomb = "0.1.5"
openat = "0.1.15"
libc = "0.2.34"
nix = "0.18"
rand = "0.7.3"

[dev-dependencies]
anyhow = "1.0.33"
tempfile = "3.0.3"
