[package]
name = "openat-ext"
description = """
    Extension methods for the openat crate
"""
version = "0.2.1-alpha.0"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["open", "openat", "filesystem", "fs"]
categories = ["filesystem", "api-bindings"]
homepage = "http://github.com/coreos/openat-ext"
documentation = "http://docs.rs/openat-ext"

[dependencies]
openat = "0.1.15"
libc = "0.2.34"
nix = ">= 0.18, < 0.21"
rand = "0.8.3"

[dev-dependencies]
anyhow = "1.0.33"
tempfile = "3.0.3"
